--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: "/api"
 
 api:
-  base-url: "http://localhost:8080"
+  base-url: "http://localhost:8080/api/v1"
 
 spring:
   servlet:
