--- a/backend/backend-ui/build.gradle
+++ b/backend/backend-ui/build.gradle
@@ -26,7 +26,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-    
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation project(':')
+
+    runtimeOnly "org.postgresql:postgresql:42.7.0"
+
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
