--- a/backend/backend-ui/src/main/resources/application.yml
+++ b/backend/backend-ui/src/main/resources/application.yml
@@ -1,7 +1,16 @@
 server:
   address: localhost
-  port: 8080
+  port: 8083
 
 spring:
   application:
     name: backend-ui
+  datasource:
+    username: "postgres"
+    password: "postgres"
+    url: "jdbc:postgresql://localhost:5432/beautysalon_db"
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
