Edit admin panel

--- a/backend/backend-ui/src/main/resources/application.yml
+++ b/backend/backend-ui/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   address: localhost
   port: 8083
 
+api:
+  base-url: "http://${server.address}:${server.port}/panel"
+
 spring:
   application:
     name: backend-ui
