--- a/backend/api/src/main/resources/application.yml
+++ b/backend/api/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 server:
-  port: 8080
+  address: ${SERVER_ADDRESS:localhost}
+  port: ${SERVER_PORT:8080}
 
 api:
-  base-url: "http://localhost:8080/api/v1"
+  base-url: "http://34.227.194.16:8080/api/v1"
 
 spring:
   servlet:
@@ -10,9 +11,9 @@ spring:
       max-file-size: 5MB
       max-request-size: 5MB
   datasource:
-    username: "postgres"
-    password: "postgres"
-    url: "jdbc:postgresql://localhost:5432/beautysalon_db"
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
+    url: ${DB_URL:jdbc:postgresql://54.226.233.18:5432/beautysalondb?createDatabaseIfNotExist=true}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
